# clipboard

./: .gitignore  Cargo.toml  LICENSE  build_deb.sh  full_release.sh
.cargo/: config.toml
src/: clipboard_monitor.rs  input_utils.rs  ipc.rs  main.rs  types.rs  ui.rs  window.rs
